# perplexity_mcp

./: .gitignore  CMakeLists.txt  Makefile  main.c
include/: constants.h  types.h  usage.h
src/: http_client.c  http_client.h  json_utils.c  json_utils.h  main.c  mcp_protocol.c  mcp_protocol.h  usage.c
src/models/: async_models.c  async_models.h  model_router.c  model_router.h  sync_models.c  sync_models.h
